# sensor_packages

./: .gitignore  DEPENDENCIES.md  README.md
docs/superpowers/plans/: 2026-05-03-oculus-sonar-phase-a-cleanup.md  2026-05-04-oculus-sonar-phase-b-1-driver-split.md  2026-05-04-oculus-sonar-phase-b-2-launch-helper.md  2026-05-04-oculus-sonar-phase-c-1-zero-copy.md  2026-05-04-oculus-sonar-phase-c-2-throttle-latched-qos.md
docs/superpowers/specs/: 2026-05-03-oculus-sonar-refactor-design.md  2026-05-04-oculus-sonar-phase-c-1-zero-copy-design.md  2026-05-04-oculus-sonar-phase-c-2-throttle-latched-qos-design.md
install/: local_setup.sh  setup.sh
install/sonoptix_ros2/lib/sonoptix_ros2/: echo  echo_imager
install/sonoptix_ros2/share/sonoptix_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/sonoptix_ros2/share/sonoptix_ros2/launch/: echo.launch.py  echo_decompress.launch.py
livox_ros2/fast_lio/: CMakeLists.txt  README.md  package.xml
livox_ros2/fast_lio/config/: avia.yaml  horizon.yaml  mid360.yaml
livox_ros2/fast_lio/rviz/: fastlio.rviz
livox_ros2/fast_lio/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
livox_ros2/livox_driver/: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  package.xml  package_ROS1.xml
livox_ros2/livox_driver/cmake/: version.cmake
livox_ros2/livox_driver/config/: MID360_config.json  display_point_cloud_ROS1.rviz  display_point_cloud_ROS2.rviz
livox_ros2/livox_driver/include/livox_driver/: qos.hpp
livox_ros2/livox_driver/launch_ROS1/: msg_HAP.launch  msg_MID360.launch  msg_mixed.launch  rviz_HAP.launch  rviz_MID360.launch  rviz_mixed.launch
livox_ros2/livox_driver/launch_ROS2/: msg_HAP_launch.py  msg_MID360_launch.py  rviz_HAP_launch.py  rviz_MID360_launch.py  rviz_mixed.py
livox_ros2/livox_driver/src/: lddc.cpp  lddc.h  lds_lidar.cpp  livox_driver.cpp
livox_ros2/livox_driver/src/call_back/: livox_lidar_callback.cpp
livox_ros2/livox_driver/src/comm/: comm.h
livox_ros2/livox_driver/src/include/: livox_driver.h  ros1_headers.h  ros2_headers.h
livox_ros2/livox_sdk/: CMakeLists.txt
livox_ros2/livox_sdk/samples/: CMakeLists.txt
livox_ros2/livox_sdk/sdk_core/: livox_sdkConfig.cmake.in
log/: latest_build
oculus_ros2/apl_msgs/: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
oculus_ros2/apl_msgs/msg/: Adc.msg  CharucoDetection.msg  Ctd.msg  DissolvedOxygen.msg  IncrementLightLevel.msg  Int16Stamped.msg  JointPositionCommand.msg  LeakDetection.msg  LeakVoltage.msg  LightBrightness.msg  PowerCommand.msg  PowerStatus.msg  SeapointTurbidity.msg  SetLightLevel.msg  StringStamped.msg  UInt16Stamped.msg
oculus_ros2/apl_msgs/nodes/: echo_raw_data
oculus_ros2/liboculus/: CMakeLists.txt  README.md  liboculus.repos  package.xml
oculus_ros2/liboculus/.github/workflows/: ci.yaml
oculus_ros2/liboculus/include/liboculus/: DataRx.h  ImageData.h
oculus_ros2/marine_msgs/marine_acoustic_msgs/: CMakeLists.txt  package.xml
oculus_ros2/marine_msgs/marine_acoustic_msgs/msg/: SonarImage.msg
oculus_ros2/marine_msgs/marine_sensor_msgs/: package.xml
oculus_ros2/oculus_sonar/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  plugins.xml
oculus_ros2/oculus_sonar/config/: m1200d_params.yaml  m3000d_params.yaml  m750d_params.yaml  oculus_params.yaml
oculus_ros2/oculus_sonar/include/oculus_sonar/: oculus_connection_manager.hpp  oculus_driver_component.hpp  oculus_driver_config.hpp  oculus_driver_publishers.hpp  oculus_fan_imager.hpp  ping_to_sonar_image.hpp  polar_to_cartesian.hpp  publishing_data_rx.h  sonar_config.hpp
oculus_ros2/oculus_sonar/launch/: _oculus_common.py  fan_imager.launch.py  m1200d.launch.py  m750d.launch.py  m750d_with_fan.launch.py  oculus.launch.py  oculus_launch.py
oculus_ros2/oculus_sonar/scripts/: regression_oculus.sh
oculus_ros2/oculus_sonar/src/: oculus_connection_manager.cpp  oculus_driver_component.cpp  oculus_driver_config.cpp  oculus_driver_publishers.cpp  oculus_fan_imager.cpp  polar_to_cartesian.cpp  publishing_data_rx.cpp  sonar_config.cpp
oculus_ros2/oculus_sonar/test/: test_ping_to_sonar_image.cpp
oculus_ros2/oculus_sonar_msgs/: CMakeLists.txt  package.xml
oculus_ros2/oculus_sonar_msgs/msg/: OculusMetadata.msg
ping1d_ros2/: .gitmodules  README.md  package.xml  setup.cfg  setup.py
ping1d_ros2/launch/: ping_sonar.launch.py
ping1d_ros2/ping1d_sonar/: CHANGELOG.md  ping1d_component.py  range_pub_component.py
ping1d_ros2/rviz/: ping_sonar.rviz
ping360_ros2/: README.md
ping360_ros2/ping360_sonar/: CHANGELOG.md  CMakeLists.txt  package.xml
ping360_ros2/ping360_sonar/include/ping360_sonar/: ping360_node.h
ping360_ros2/ping360_sonar/launch/: ping360.launch.py
ping360_ros2/ping360_sonar/ping360_sonar/: ping360_image_to_pointcloud.py  sonar_interface.py
ping360_ros2/ping360_sonar/src/: ping360.py  ping360_node.cpp
relay_controller/: relay_monitor.py  relay_monitor_readonly.py  relay_monitor_simple.py  relay_node.py  relay_node_v2.py
sonoptix_ros2/: CHANGELOG.md  README.md  package.xml  setup.cfg  setup.py
sonoptix_ros2/launch/: echo.launch.py  echo_decompress.launch.py
sonoptix_ros2/sonoptix_ros2/: echo.py  echo_imager.py  qos.py
